--- a/app.yaml
+++ b/app.yaml
@@ -12,12 +12,8 @@ handlers:
 - url: /.*
   script: auto
 
-automatic_scaling:
-  min_num_instances: 2
-  max_num_instances: 5
-  cool_down_period_sec: 180
+basic_scaling:
+  max_instances: 5
+  idle_timeout: 10m
 
-resources:
-  cpu: 1
-  memory_gb: 0.6
-  disk_size_gb: 10
+instance_class: B1
