Changed config to make flake8 the entrypoint

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,10 +11,7 @@ steps:
   - '-r'
   - 'requirements/dev.txt'
 - name: python:3.8
-  entrypoint: python3
+  entrypoint: flake8
   id: RUN-LINTER-CHECK
-  args:
-  - '-m'
-  - 'flake8'
   waitFor:
   - INSTALL
