--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
+[tool:pytest]
+testpaths = tests
+
+[coverage:run]
+branch = True
+source =
+    app
+
 [flake8]
 ignore = E501, E308
 extend-ignore = E402, F401 ./app/core/__init__.py
