--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-runtime: python38
+runtime: python39
 
 handlers:
   # This configures Google App Engine to serve the files in the app's static
@@ -6,13 +6,13 @@ handlers:
 - url: /static
   static_dir: app/static
 
-- url: /favicon.ico
+- url: /favicon\.ico
   static_files: app/static/favicon.ico
   upload: app/static/favicon\.ico
 
 - url: /cv.pdf
   static_files: app/static/cv.pdf
-  upload: app/static/cv.pdf
+  upload: app/static/cv\.pdf
 
   # This handler routes all requests not caught above to your main app. It is
   # required when static routes are defined, but can be omitted (along with
