--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ safety = "^1.10.3"
 pytest = "^7.1.1"
 coverage = "^6.3.2"
 black = "^22.1.0"
+pre-commit = "^2.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
