--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,13 +34,23 @@ repos:
       language: system
       pass_filenames: false
 
-  # convert app/blog/templates/markdown/*.html to app/blog/templates/markdown/*.md
+  # convert app/blog/templates/markdown/*/*.html to app/blog/templates/markdown/*/*.md
   # Please make sure you have pandoc installed (sudo apt install pandoc)
   - repo: local
     hooks:
     - id: convert-blog-md-to-html
       name: convert-blog-md-to-html
-      description: 'convert app/blog/markdown/*.md to app/blog/markdown/*.html'
-      entry: bash -c 'pandoc -o app/blog/templates/markdown/*.html app/blog/templates/markdown/*.md'
+      description: 'convert app/blog/markdown/*/*.md to app/blog/markdown/*/*.html'
+      entry: bash -c 'pandoc -o app/blog/templates/markdown/*/*.html app/blog/templates/markdown/*/*.md'
+      language: system
+      pass_filenames: false
+
+  # Create base links for the blog
+  - repo: local
+    hooks:
+    - id: create-blog-base-page
+      name: create-blog-base-page
+      description: 'Create the base links for the blog home page based on files inside app/blog/templates/markdown/'
+      entry: bash -c 'cd app/blog/templates/markdown/ && tree -H '.' -L 1 --noreport --charset utf-8 -P "*.html" -o index.html'
       language: system
       pass_filenames: false
