--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     hooks:
       - id: gitleaks
 
-  # convert app/core/templates/markdown/*.html to app/core/templates/markdown/*.md
+  # convert app/core/templates/markdown/*.md to app/core/templates/markdown/*.html
   # Please make sure you have pandoc installed (sudo apt install pandoc)
   - repo: local
     hooks:
@@ -31,6 +31,17 @@ repos:
       name: convert-core-md-to-html
       description: 'convert app/core/markdown/*.md to app/core/markdown/*.html'
       entry: bash -c 'pandoc -o app/core/templates/markdown/*.html app/core/templates/markdown/*.md'
+      language: system
+      pass_filenames: false
+
+  # convert app/projects/templates/markdown/*.md to app/projects/templates/markdown/*.md
+  # Please make sure you have pandoc installed (sudo apt install pandoc)
+  - repo: local
+    hooks:
+    - id: convert-projects-md-to-html
+      name: convert-projects-md-to-html
+      description: 'convert app/projects/markdown/*.md to app/projects/markdown/*.html'
+      entry: bash -c 'pandoc -o app/projects/templates/markdown/*.html app/projects/templates/markdown/*.md'
       language: system
       pass_filenames: false
 
