--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-click==8.0.4; python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.5.0"
-flask==2.0.3; python_version >= "3.6"
-itsdangerous==2.1.1; python_version >= "3.7"
-jinja2==3.0.3; python_version >= "3.6"
+click==8.1.1; python_version >= "3.7"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
+flask==2.1.1; python_version >= "3.7"
+importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
+itsdangerous==2.1.2; python_version >= "3.7"
+jinja2==3.1.1; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7"
-werkzeug==2.0.3; python_version >= "3.6"
+werkzeug==2.1.0; python_version >= "3.7"
+zipp==3.7.0; python_version < "3.10" and python_version >= "3.7"
