--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,49 +3,49 @@ attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or pyth
 bandit==1.7.4; python_version >= "3.7"
 black==22.3.0; python_full_version >= "3.6.2"
 certifi==2021.10.8; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-cfgv==3.3.1; python_full_version >= "3.6.1"
+cfgv==3.3.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.5"
-click==8.1.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+click==8.1.3; python_version >= "3.7" and python_full_version >= "3.6.2"
 colorama==0.4.4; platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.6.2" and sys_platform == "win32"
 coverage==6.3.2; python_version >= "3.7"
-distlib==0.3.4; python_full_version >= "3.6.1"
+distlib==0.3.4; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 dparse==0.5.1; python_version >= "3.5"
-filelock==3.6.0; python_version >= "3.7" and python_full_version >= "3.6.1"
+filelock==3.6.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 flake8==4.0.1; python_version >= "3.6"
-flask==2.1.1; python_version >= "3.7"
+flask==2.1.2; python_version >= "3.7"
 gitdb==4.0.9; python_version >= "3.7"
 gitpython==3.1.27; python_version >= "3.7"
-identify==2.4.12; python_version >= "3.7" and python_full_version >= "3.6.1"
+identify==2.5.0; python_version >= "3.7"
 idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.7"
 itsdangerous==2.1.2; python_version >= "3.7"
-jinja2==3.1.1; python_version >= "3.7"
+jinja2==3.1.2; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7"
 mccabe==0.6.1; python_version >= "3.6"
 mypy-extensions==0.4.3; python_full_version >= "3.6.2"
-nodeenv==1.6.0; python_full_version >= "3.6.1"
+nodeenv==1.6.0; python_version >= "3.7"
 packaging==21.3; python_version >= "3.7"
 pathspec==0.9.0; python_full_version >= "3.6.2"
-pbr==5.8.1; python_version >= "3.7"
-platformdirs==2.5.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+pbr==5.9.0; python_version >= "3.7"
+platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
 pluggy==1.0.0; python_version >= "3.7"
-pre-commit==2.17.0; python_full_version >= "3.6.1"
+pre-commit==2.19.0; python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pyparsing==3.0.7; python_version >= "3.7"
-pytest==7.1.1; python_version >= "3.7"
-pyyaml==6.0; python_version >= "3.7" and python_full_version >= "3.6.1"
+pyparsing==3.0.8; python_full_version >= "3.6.8" and python_version >= "3.7"
+pytest==7.1.2; python_version >= "3.7"
+pyyaml==6.0; python_version >= "3.7"
 requests==2.27.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
 safety==1.10.3; python_version >= "3.5"
-six==1.16.0; python_full_version >= "3.6.1"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 smmap==5.0.0; python_version >= "3.7"
 stevedore==3.5.0; python_version >= "3.7"
-toml==0.10.2; python_full_version >= "3.6.1" and python_version >= "3.5"
+toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.6.2" and python_version >= "3.7"
-typing-extensions==4.1.1; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.6"
+typing-extensions==4.2.0; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.7"
 urllib3==1.26.9; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.5"
-virtualenv==20.14.0; python_full_version >= "3.6.1"
-werkzeug==2.1.0; python_version >= "3.7"
-zipp==3.7.0; python_version < "3.10" and python_version >= "3.7"
+virtualenv==20.14.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+werkzeug==2.1.2; python_version >= "3.7"
+zipp==3.8.0; python_version < "3.10" and python_version >= "3.7"
