--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,51 +1,52 @@
-atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0"
-attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-bandit==1.7.4; python_version >= "3.7"
-black==22.3.0; python_full_version >= "3.6.2"
-certifi==2021.10.8; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-cfgv==3.3.1; python_full_version >= "3.6.1" and python_version >= "3.7"
-charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.5"
-click==8.1.3; python_version >= "3.7" and python_full_version >= "3.6.2"
-colorama==0.4.4; platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.6.2" and sys_platform == "win32"
-coverage==6.3.2; python_version >= "3.7"
-distlib==0.3.4; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-dparse==0.5.2; python_version >= "3.5"
-filelock==3.6.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-flake8==4.0.1; python_version >= "3.6"
-flask==2.1.2; python_version >= "3.7"
-gitdb==4.0.9; python_version >= "3.7"
-gitpython==3.1.27; python_version >= "3.7"
-identify==2.5.0; python_version >= "3.7"
-idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
-iniconfig==1.1.1; python_version >= "3.7"
-itsdangerous==2.1.2; python_version >= "3.7"
-jinja2==3.1.2; python_version >= "3.7"
-markupsafe==2.1.1; python_version >= "3.7"
-mccabe==0.6.1; python_version >= "3.6"
-mypy-extensions==0.4.3; python_full_version >= "3.6.2"
-nodeenv==1.6.0; python_version >= "3.7"
-packaging==21.3; python_version >= "3.7"
-pathspec==0.9.0; python_full_version >= "3.6.2"
-pbr==5.9.0; python_version >= "3.7"
-platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
-pluggy==1.0.0; python_version >= "3.7"
-pre-commit==2.19.0; python_version >= "3.7"
-py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pyparsing==3.0.8; python_full_version >= "3.6.8" and python_version >= "3.7"
-pytest==7.1.2; python_version >= "3.7"
-pyyaml==6.0; python_version >= "3.7"
-requests==2.27.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-safety==1.10.3; python_version >= "3.5"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-smmap==5.0.0; python_version >= "3.7"
-stevedore==3.5.0; python_version >= "3.7"
-toml==0.10.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.6.2" and python_version >= "3.7"
-typing-extensions==4.2.0; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.7"
-urllib3==1.26.9; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.5"
-virtualenv==20.14.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-werkzeug==2.1.2; python_version >= "3.7"
-zipp==3.8.0; python_version < "3.10" and python_version >= "3.7"
+bandit==1.7.5 ; python_version >= "3.9" and python_version < "4.0"
+black==22.12.0 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.9" and python_version < "4"
+cfgv==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.1.0 ; python_version >= "3.9" and python_version < "4"
+click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+coverage==6.5.0 ; python_version >= "3.9" and python_version < "4.0"
+distlib==0.3.6 ; python_version >= "3.9" and python_version < "4.0"
+dparse==0.6.2 ; python_version >= "3.9" and python_version < "4.0"
+exceptiongroup==1.1.1 ; python_version >= "3.9" and python_version < "3.11"
+filelock==3.11.0 ; python_version >= "3.9" and python_version < "4.0"
+flake8==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
+flask==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+gitdb==4.0.10 ; python_version >= "3.9" and python_version < "4.0"
+gitpython==3.1.31 ; python_version >= "3.9" and python_version < "4.0"
+identify==2.5.22 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.9" and python_version < "4"
+importlib-metadata==6.3.0 ; python_version >= "3.9" and python_version < "3.10"
+iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
+itsdangerous==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
+markdown-it-py==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
+mccabe==0.6.1 ; python_version >= "3.9" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+nodeenv==1.7.0 ; python_version >= "3.9" and python_version < "4.0"
+packaging==23.0 ; python_version >= "3.9" and python_version < "4.0"
+pathspec==0.11.1 ; python_version >= "3.9" and python_version < "4.0"
+pbr==5.11.1 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==3.2.0 ; python_version >= "3.9" and python_version < "4.0"
+pluggy==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+pre-commit==2.21.0 ; python_version >= "3.9" and python_version < "4.0"
+pycodestyle==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
+pyflakes==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.15.0 ; python_version >= "3.9" and python_version < "4.0"
+pytest==7.3.0 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.28.2 ; python_version >= "3.9" and python_version < "4"
+rich==13.3.3 ; python_version >= "3.9" and python_version < "4.0"
+safety==1.10.3 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==67.6.1 ; python_version >= "3.9" and python_version < "4.0"
+smmap==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
+stevedore==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.9" and python_full_version < "3.11.0a7"
+typing-extensions==4.5.0 ; python_version >= "3.9" and python_version < "3.10"
+urllib3==1.26.15 ; python_version >= "3.9" and python_version < "4"
+virtualenv==20.21.0 ; python_version >= "3.9" and python_version < "4.0"
+werkzeug==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.15.0 ; python_version >= "3.9" and python_version < "3.10"
