--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-click==8.1.3; python_version >= "3.7"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
-flask==2.1.2; python_version >= "3.7"
-importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
-itsdangerous==2.1.2; python_version >= "3.7"
-jinja2==3.1.2; python_version >= "3.7"
-markupsafe==2.1.1; python_version >= "3.7"
-werkzeug==2.1.2; python_version >= "3.7"
-zipp==3.8.0; python_version < "3.10" and python_version >= "3.7"
+click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
+flask==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==6.3.0 ; python_version >= "3.9" and python_version < "3.10"
+itsdangerous==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
+werkzeug==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.15.0 ; python_version >= "3.9" and python_version < "3.10"
