--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,22 +1,23 @@
 bandit==1.7.5 ; python_version >= "3.9" and python_version < "4.0"
 black==22.12.0 ; python_version >= "3.9" and python_version < "4.0"
-certifi==2022.12.7 ; python_version >= "3.9" and python_version < "4"
+blinker==1.6.2 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2023.5.7 ; python_version >= "3.9" and python_version < "4.0"
 cfgv==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
-charset-normalizer==3.1.0 ; python_version >= "3.9" and python_version < "4"
+charset-normalizer==3.1.0 ; python_version >= "3.9" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 coverage==6.5.0 ; python_version >= "3.9" and python_version < "4.0"
 distlib==0.3.6 ; python_version >= "3.9" and python_version < "4.0"
 dparse==0.6.2 ; python_version >= "3.9" and python_version < "4.0"
 exceptiongroup==1.1.1 ; python_version >= "3.9" and python_version < "3.11"
-filelock==3.11.0 ; python_version >= "3.9" and python_version < "4.0"
+filelock==3.12.0 ; python_version >= "3.9" and python_version < "4.0"
 flake8==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
-flask==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+flask==2.3.2 ; python_version >= "3.9" and python_version < "4.0"
 gitdb==4.0.10 ; python_version >= "3.9" and python_version < "4.0"
 gitpython==3.1.31 ; python_version >= "3.9" and python_version < "4.0"
-identify==2.5.22 ; python_version >= "3.9" and python_version < "4.0"
-idna==3.4 ; python_version >= "3.9" and python_version < "4"
-importlib-metadata==6.3.0 ; python_version >= "3.9" and python_version < "3.10"
+identify==2.5.24 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==6.6.0 ; python_version >= "3.9" and python_version < "3.10"
 iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
 itsdangerous==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
@@ -25,28 +26,28 @@ markupsafe==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
 mccabe==0.6.1 ; python_version >= "3.9" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
-nodeenv==1.7.0 ; python_version >= "3.9" and python_version < "4.0"
-packaging==23.0 ; python_version >= "3.9" and python_version < "4.0"
+nodeenv==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
+packaging==23.1 ; python_version >= "3.9" and python_version < "4.0"
 pathspec==0.11.1 ; python_version >= "3.9" and python_version < "4.0"
 pbr==5.11.1 ; python_version >= "3.9" and python_version < "4.0"
-platformdirs==3.2.0 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==3.5.1 ; python_version >= "3.9" and python_version < "4.0"
 pluggy==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 pre-commit==2.21.0 ; python_version >= "3.9" and python_version < "4.0"
 pycodestyle==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
 pyflakes==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
-pygments==2.15.0 ; python_version >= "3.9" and python_version < "4.0"
-pytest==7.3.0 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.15.1 ; python_version >= "3.9" and python_version < "4.0"
+pytest==7.3.1 ; python_version >= "3.9" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.9" and python_version < "4.0"
-requests==2.28.2 ; python_version >= "3.9" and python_version < "4"
-rich==13.3.3 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.30.0 ; python_version >= "3.9" and python_version < "4.0"
+rich==13.3.5 ; python_version >= "3.9" and python_version < "4.0"
 safety==1.10.3 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==67.6.1 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==67.7.2 ; python_version >= "3.9" and python_version < "4.0"
 smmap==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
-stevedore==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
+stevedore==5.1.0 ; python_version >= "3.9" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.9" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.9" and python_full_version < "3.11.0a7"
 typing-extensions==4.5.0 ; python_version >= "3.9" and python_version < "3.10"
-urllib3==1.26.15 ; python_version >= "3.9" and python_version < "4"
-virtualenv==20.21.0 ; python_version >= "3.9" and python_version < "4.0"
-werkzeug==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.0.2 ; python_version >= "3.9" and python_version < "4.0"
+virtualenv==20.23.0 ; python_version >= "3.9" and python_version < "4.0"
+werkzeug==2.3.4 ; python_version >= "3.9" and python_version < "4.0"
 zipp==3.15.0 ; python_version >= "3.9" and python_version < "3.10"
