--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -27,7 +27,7 @@ mccabe==0.6.1 ; python_version >= "3.9" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 nodeenv==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
-packaging==23.1 ; python_version >= "3.9" and python_version < "4.0"
+packaging==21.3 ; python_version >= "3.9" and python_version < "4.0"
 pathspec==0.11.1 ; python_version >= "3.9" and python_version < "4.0"
 pbr==5.11.1 ; python_version >= "3.9" and python_version < "4.0"
 platformdirs==3.5.1 ; python_version >= "3.9" and python_version < "4.0"
@@ -36,11 +36,14 @@ pre-commit==2.21.0 ; python_version >= "3.9" and python_version < "4.0"
 pycodestyle==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
 pyflakes==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
 pygments==2.15.1 ; python_version >= "3.9" and python_version < "4.0"
+pyparsing==3.0.9 ; python_version >= "3.9" and python_version < "4.0"
 pytest==7.3.1 ; python_version >= "3.9" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.30.0 ; python_version >= "3.9" and python_version < "4.0"
 rich==13.3.5 ; python_version >= "3.9" and python_version < "4.0"
-safety==1.10.3 ; python_version >= "3.9" and python_version < "4.0"
+ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.12" and python_version >= "3.9"
+ruamel-yaml==0.17.26 ; python_version >= "3.9" and python_version < "4.0"
+safety==2.3.5 ; python_version >= "3.9" and python_version < "4.0"
 setuptools==67.7.2 ; python_version >= "3.9" and python_version < "4.0"
 smmap==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
 stevedore==5.1.0 ; python_version >= "3.9" and python_version < "4.0"
