--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,55 +1,51 @@
-bandit==1.7.5 ; python_version >= "3.9" and python_version < "4.0"
+bandit==1.7.9 ; python_version >= "3.9" and python_version < "4.0"
 black==22.12.0 ; python_version >= "3.9" and python_version < "4.0"
-blinker==1.6.3 ; python_version >= "3.9" and python_version < "4.0"
-certifi==2023.7.22 ; python_version >= "3.9" and python_version < "4.0"
+blinker==1.8.2 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2024.7.4 ; python_version >= "3.9" and python_version < "4.0"
 cfgv==3.4.0 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
 coverage==6.5.0 ; python_version >= "3.9" and python_version < "4.0"
-distlib==0.3.7 ; python_version >= "3.9" and python_version < "4.0"
+distlib==0.3.8 ; python_version >= "3.9" and python_version < "4.0"
 dparse==0.6.3 ; python_version >= "3.9" and python_version < "4.0"
-exceptiongroup==1.1.3 ; python_version >= "3.9" and python_version < "3.11"
-filelock==3.13.1 ; python_version >= "3.9" and python_version < "4.0"
+exceptiongroup==1.2.2 ; python_version >= "3.9" and python_version < "3.11"
+filelock==3.15.4 ; python_version >= "3.9" and python_version < "4.0"
 flake8==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
 flask==2.3.3 ; python_version >= "3.9" and python_version < "4.0"
-gitdb==4.0.11 ; python_version >= "3.9" and python_version < "4.0"
-gitpython==3.1.40 ; python_version >= "3.9" and python_version < "4.0"
-identify==2.5.31 ; python_version >= "3.9" and python_version < "4.0"
-idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
-importlib-metadata==6.8.0 ; python_version >= "3.9" and python_version < "3.10"
+identify==2.6.0 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==8.2.0 ; python_version >= "3.9" and python_version < "3.10"
 iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
-itsdangerous==2.1.2 ; python_version >= "3.9" and python_version < "4.0"
-jinja2==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
+itsdangerous==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
+jinja2==3.1.4 ; python_version >= "3.9" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
-markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.9" and python_version < "4.0"
 mccabe==0.6.1 ; python_version >= "3.9" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
-nodeenv==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
-packaging==21.3 ; python_version >= "3.9" and python_version < "4.0"
-pathspec==0.11.2 ; python_version >= "3.9" and python_version < "4.0"
-pbr==5.11.1 ; python_version >= "3.9" and python_version < "4.0"
-platformdirs==3.11.0 ; python_version >= "3.9" and python_version < "4.0"
-pluggy==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+nodeenv==1.9.1 ; python_version >= "3.9" and python_version < "4.0"
+packaging==24.1 ; python_version >= "3.9" and python_version < "4.0"
+pathspec==0.12.1 ; python_version >= "3.9" and python_version < "4.0"
+pbr==6.0.0 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==4.2.2 ; python_version >= "3.9" and python_version < "4.0"
+pluggy==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
 pre-commit==2.21.0 ; python_version >= "3.9" and python_version < "4.0"
 pycodestyle==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
 pyflakes==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
-pygments==2.16.1 ; python_version >= "3.9" and python_version < "4.0"
-pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "4.0"
-pytest==7.4.3 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.9" and python_version < "4.0"
+pytest==7.4.4 ; python_version >= "3.9" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
-rich==13.6.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.9" and python_version < "4.0"
+rich==13.7.1 ; python_version >= "3.9" and python_version < "4.0"
 ruamel-yaml-clib==0.2.8 ; platform_python_implementation == "CPython" and python_version < "3.13" and python_version >= "3.9"
-ruamel-yaml==0.18.3 ; python_version >= "3.9" and python_version < "4.0"
-safety==2.3.5 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==68.2.2 ; python_version >= "3.9" and python_version < "4.0"
-smmap==5.0.1 ; python_version >= "3.9" and python_version < "4.0"
-stevedore==5.1.0 ; python_version >= "3.9" and python_version < "4.0"
+ruamel-yaml==0.18.6 ; python_version >= "3.9" and python_version < "4.0"
+safety==2.3.4 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==71.1.0 ; python_version >= "3.9" and python_version < "4.0"
+stevedore==5.2.0 ; python_version >= "3.9" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.9" and python_full_version < "3.11.0a7"
-typing-extensions==4.8.0 ; python_version >= "3.9" and python_version < "3.10"
-urllib3==2.0.7 ; python_version >= "3.9" and python_version < "4.0"
-virtualenv==20.24.6 ; python_version >= "3.9" and python_version < "4.0"
-werkzeug==3.0.1 ; python_version >= "3.9" and python_version < "4.0"
-zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.10"
+typing-extensions==4.12.2 ; python_version >= "3.9" and python_version < "3.10"
+urllib3==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
+virtualenv==20.26.3 ; python_version >= "3.9" and python_version < "4.0"
+werkzeug==3.0.3 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.19.2 ; python_version >= "3.9" and python_version < "3.10"
